--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "chart.js": "^2.9.4",
+    "csv": "^6.0.5",
     "dotenv": "^10.0.0",
     "js-cookie": "^3.0.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
+    "react-code-blocks": "0.0.9-0",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
+    "react-switch": "^6.0.0",
     "serve": "^12.0.1",
     "typescript": "^4.1.5",
     "uuid": "^8.3.2",
