--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -9,9 +9,10 @@ jobs:
   login:
     runs-on: ubuntu-latest
     steps:
-      - name: login to GitHub Container Registry
-      - uses: docker/login-action@v1
-      - with:
+      -
+        name: login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
