--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -9,10 +9,9 @@ jobs:
   login:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
+      - name: login to GitHub Container Registry
+      - uses: docker/login-action@v1
+      - with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
@@ -20,10 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create image from repository
-      - uses: actions/checkout@v2
-        run: |
+      - run: |
           docker build -t nec-webapp-client .
           docker push nec-webapp-client
-
+      - name: push image to GitHub Container Registry
+        run: 
       
 
