--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create image from repository
+        uses: actions/checkout@v2
         run: docker build -t nec-webapp-client .
       - name: push image to GitHub Container Registry
         run: docker push nec-webapp-client
