--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: create image from repository
         run: docker build -t ghcr.io/${{ github.actor }}/nec-webapp-client .
+        run: echo ${{ github.actor }}
       - name: push image to GitHub Container Registry
         run: docker push ghcr.io/${{ github.actor }}/nec-webapp-client:latest
 
