--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -14,15 +14,13 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN }}
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: create image from repository
-        run: |
-          docker build -t ghcr.io/${{ github.actor }}/nec-webapp-client .
-          echo ${{ secrets.GITHUB_TOKEN }}
+        run: docker build -t ghcr.io/${{ github.actor }}/nec-webapp-client .
       - name: push image to GitHub Container Registry
         run: docker push ghcr.io/${{ github.actor }}/nec-webapp-client:latest
 
