--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -19,6 +19,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: {{defaultContext}}:docker
+          context: ../../.
           push: true
           tags: ghcr.io/${{ github.actor }}/nec-webapp-client:latest
