--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -9,6 +9,8 @@ jobs:
   docker-push:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout repository
+        uses: actions/checkout@v2
       - name: login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -19,6 +21,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./
+          context: .
           push: true
           tags: ghcr.io/${{ github.actor }}/nec-webapp-client:latest
