--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
+      - name: set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
