--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -6,7 +6,7 @@ on:
       - server
 
 jobs:
-  docker-push:
+  dockerloginbuildpush:
     runs-on: ubuntu-latest
     steps:
       - name: login to GitHub Container Registry
@@ -15,12 +15,28 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: create image from repository
         run: docker build -t ghcr.io/${{ github.actor }}/nec-webapp-client .
       - name: push image to GitHub Container Registry
         run: docker push ghcr.io/${{ github.actor }}/nec-webapp-client:latest
+
+#jobs:
+#  docker-push:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: login to GitHub Container Registry
+#        uses: docker/login-action@v1
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
+#      - name: checkout repository
+#        uses: actions/checkout@v2
+#      - name: create image from repository
+#        run: docker build -t ghcr.io/${{ github.actor }}/nec-webapp-client .
+#      - name: push image to GitHub Container Registry
+#        run: docker push ghcr.io/${{ github.actor }}/nec-webapp-client:latest
 
 #- name: checkout repository
 #        uses: actions/checkout@v2
