--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -13,13 +13,13 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: name-ethnicity-classifier
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v2
       - name: create image from repository
-        run: docker build -t ghcr.io/${{ github.actor }}/nec-webapp-client .
+        run: docker build -t ghcr.io/name-ethnicity-classifier/nec-webapp-client .
       - name: push image to GitHub Container Registry
-        run: docker push ghcr.io/${{ github.actor }}/nec-webapp-client
+        run: docker push ghcr.io/name-ethnicity-classifier/nec-webapp-client
 
 #jobs:
 #  docker-push:
