--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
     "react-code-blocks": "0.0.9-0",
+    "react-cookie-consent": "^9.0.0",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.1",
